--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.clearfix:after {
+     content: ".";
+     display: block;
+     clear: both;
+     visibility: hidden;
+     line-height: 0;
+     height: 0;
+}
+
+.clear {
+	clear: both;
+}
+
 .board {
      border: solid 1px black;
      height: 800px;
@@ -27,17 +40,6 @@
      font-family: Arial, Helvetica, sans-serif;
 }
 
-.clickX {
-     /* background-color: blue; */
-}
-
-.clickO {
- 
-}
-.used {
-
-}
-
 .activePlayer {
      border: solid red 2px;
 }
@@ -59,3 +61,26 @@
 .player {
      padding: 10px;
 }
+
+#overlay {
+     position: fixed; /* Sit on top of the page content */
+     display: none; /* Hidden by default */
+     width: 800px; /* Full width (cover the whole page) */
+     height: 800px; /* Full height (cover the whole page) */
+     margin: 132px auto;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+     cursor: pointer; /* Add a pointer on hover */
+   }
+#text{
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     font-size: 50px;
+     color: white;
+     transform: translate(-50%,-50%);
+     -ms-transform: translate(-50%,-50%);
